- re-enabled mobirise script for hamburger menu - fixed z-index of open hamburger menu

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -165,3 +165,7 @@ div.product-variants .form-control {
     display: none;
   }
 }
+
+.mbr-navbar--open {
+  z-index: 4;
+}
